# mirai-agent

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Mirai.sln  NOTICE  README.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EDGE_TOOLS.md  GETTING_STARTED.md  GITHUB_SETUP.md  HTTP_API.md  MEMORY.md  TESTING.md  TOOL_REGISTRATION.md  UPGRADING_TO_ENTERPRISE.md
mirai/: __init__.py  chat.py  logging_config.py
mirai/cli/: __init__.py  commands.py  registry.py  terminal_chat.py
mirai/core/: assets_check.py  audit.py  auth.py  chatbot.py  connection.py  env_load.py  exceptions.py  http_config.py  tool.py  tool_call_normalize.py  tool_routing.py  tool_trace.py
mirai/core/api/: __init__.py  __main__.py  app_factory.py  chat.py  chat_context.py  chat_debug_trace.py  dependencies.py  docs_middleware.py  edge.py  events.py  http_errors.py  http_helpers.py  legacy_state.py  line_webhook.py  routes.py  schemas.py  state.py  stream_consumer.py  timers.py  uploads.py
mirai/core/api/routers/: __init__.py  chat.py  config.py  edge.py  health.py  memory.py  monitor.py  stt.py  timers.py  tools.py  uploads.py
mirai/core/config/: __init__.py  connection.py  credentials.py  lan.py  legacy.py  line.py  model.py  paths.py  setup_wizard.py  store.py  telegram.py
mirai/core/dispatch/: __init__.py  confirmation.py  dispatcher.py  edge.py  local.py  normalizer.py  trace_sink.py  usage.py
mirai/core/memories/: backend.py  constants.py  context.py  embedding_runner.py  embedding_state.py  memory.py  retrieval.py  sessions.py  tool_replay.py  transcript.py  writer.py
mirai/core/memories/repos/: __init__.py  long_term.py  messages.py  observations.py  sessions.py  summaries.py
mirai/core/multimodal/: __init__.py
mirai/core/plugins/: __init__.py  discovery.py  identity.py  ports.py  registry.py  single_user.py
mirai/core/proactive/: __init__.py  interaction.py  planner.py  profiles.py  prompt.py  service.py  state.py  timezone_utils.py  tools.py
mirai/core/prompts/: __init__.py  composer.py  defaults.py  http_bridge.py  store.py
mirai/core/providers/: __init__.py  claude_provider.py  diagnostics.py  gemini_provider.py  ollama_provider.py  openai_provider.py
mirai/core/runtime/: __init__.py  bootstrap.py  edge_naming.py  edge_registry.py  state.py  tool_catalog.py
mirai/core/services/: __init__.py  chat_turn.py  edge_service.py  memory_service.py  model_config_service.py  timer_service.py  tool_execution.py
mirai/core/streaming/: __init__.py  think_parser.py
mirai/core/stt/: __init__.py  base.py  factory.py  whisper_provider.py
mirai/demo/: __init__.py  launcher.py
mirai/demo/planner/: __init__.py  __main__.py  app.py  bootstrap.py
mirai/demo/smart_home/: __init__.py  __main__.py  app.py  bootstrap.py
mirai/edge/: client.py
mirai/edge/template/: env.template
mirai/edge/template/mirai_tools/: README.md  __init__.py
mirai/edge/template/mirai_tools/cpp/: README.md  mirai_setup.cpp
mirai/edge/template/mirai_tools/csharp/: MiraiSetup.cs  Program.cs  README.md
mirai/edge/template/mirai_tools/dart/: README.md  pubspec.yaml
mirai/edge/template/mirai_tools/go/: README.md  main.go  mirai_setup.go
mirai/line/: __init__.py  bridge.py  client.py  flex_builders.py  handlers.py  notify.py  server.py
mirai/sdk/: README.md  __init__.py
mirai/sdk/cpp/: CMakeLists.txt
mirai/sdk/cpp/include/mirai/: mirai_agent.h  mirai_agent.hpp  tool_arguments.hpp  tool_parameter.hpp
mirai/sdk/cpp/src/: c_api.cpp
mirai/sdk/csharp/: Auth.cs  Connection.cs  EnvParser.cs  MiraiAgent.cs  MiraiSDK.csproj  RegisterOptions.cs  SchemaBuilder.cs  ToolArguments.cs  ToolHandler.cs  ToolParameter.cs
mirai/sdk/dart/: pubspec.yaml
mirai/sdk/dart/lib/: mirai_sdk.dart
mirai/sdk/go/: agent.go  auth.go  connection.go  env.go  go.mod  schema.go  types.go
mirai/sdk/java/: pom.xml
mirai/sdk/kotlin/: build.gradle.kts  settings.gradle.kts
mirai/sdk/python/: __init__.py  agent_client.py
mirai/sdk/rust/: Cargo.toml
mirai/sdk/rust/src/: agent.rs  auth.rs  connection.rs  lib.rs  schema.rs  types.rs
mirai/sdk/swift/: Package.swift
mirai/sdk/typescript/: package-lock.json  package.json
mirai/sdk/typescript/src/: MiraiAgent.ts  auth.ts  connection.ts  index.ts  runtime.ts  schema.ts  types.ts
mirai/sdk/ue5/MiraiSDK/: MiraiSDK.Build.cs
mirai/telegram/: __init__.py  bot.py  bridge.py  notify.py
mirai/tools/: bootstrap.py  file_tools.py  timer_tools.py  web_tools.py
mirai/ui/: requirements.txt  rxconfig.py
mirai/ui/ui/: constants.py  timer_listener.py  ui.py
mirai/voice/: __init__.py  audio_source.py  dispatch.py  runtime.py  segmenter.py  wake.py
tests/: conftest.py  test_api_factory.py  test_api_schemas.py  test_chat_api.py  test_chat_debug_api.py  test_chat_debug_trace.py  test_chat_turn_service.py  test_cli_environment.py  test_config_cleanup.py  test_config_model.py  test_config_model_api.py  test_dispatch_confirmation.py  test_dispatch_dispatcher.py  test_dispatch_normalizer.py  test_dispatch_usage.py  test_edge_websocket.py  test_edge_workspace.py  test_gemini_edge_tool_names.py  test_gemini_tool_sequence_sanitize.py  test_health_endpoint.py  test_http_config.py  test_line_client_helpers.py  test_line_flex_builders.py  test_line_postback_confirm.py  test_line_signature.py  test_line_webhook_in_core.py  test_memory_structured.py  test_memory_tool_persist.py  test_memory_tool_window.py  test_monitor_api.py  test_proactive_messaging.py  test_prompt_http_bridge.py  test_provider_diagnostics_filename.py  test_runtime_state.py  test_sdk_contract.py  test_stream_event.py  test_stt_api.py  test_timer_callback_tools.py  test_tool_call_normalize.py  test_tool_routing.py  (+2 more)
tests/compat/: test_single_user_unchanged.py
tests/voice/: test_cli_validation.py  test_cross_channel_context.py  test_runtime.py
tools/benchmarks/: run_benchmarks.py
(+57 files in other folders)
