[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirai-agent"
version = "0.2.0"
description = "Mirai — open-source single-user / LAN AI agent framework"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mirai contributors" }]
keywords = ["ai", "agent", "llm", "fastapi", "ollama", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "ollama>=0.4",
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.39",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "lancedb>=0.4",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "requests>=2.28",
    "reflex>=0.5",
    "PyPDF2>=3.0",
    "python-docx>=1.0",
    "json-repair>=0.30",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
include = ["mirai*"]
exclude = ["_enterprise_seed*"]

[tool.setuptools.package-data]
mirai = [
    "edge/template/**/*",
    "edge/template/*",
    "sdk/**/*",
]

[project.scripts]
mirai = "mirai.cli:main"

[project.urls]
Homepage = "https://github.com/wenxijiao/Mirai"
Repository = "https://github.com/wenxijiao/Mirai"
Documentation = "https://github.com/wenxijiao/Mirai/tree/main/docs"
Issues = "https://github.com/wenxijiao/Mirai/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["mirai", "tests"]
exclude = ["_enterprise_seed"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E721", "E402", "E702"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Many optional / generated imports (templates, SDK shims) are not resolvable as a flat tree.
reportMissingImports = "none"
reportMissingTypeStubs = false
# LanceDB and provider wrappers are untyped; keep CI signal on syntax/unbound names without noise.
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportAssignmentType = "none"
reportReturnType = "none"
reportOptionalSubscript = "none"
reportMissingModuleSource = "none"
# Reflex UI is highly dynamic; static typing for mirai/ui is not enforced in CI.
# Edge templates ship multi-language scaffolds; analysis targets the runtime packages only.
exclude = [
    "_enterprise_seed",
    "mirai/ui",
    "mirai/edge/template",
    "**/__pycache__",
    ".venv",
    "venv",
]

# Slightly tighter diagnostics for memory subsystem (incremental typing).
[[tool.pyright.executionEnvironments]]
root = "mirai/core/memories"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
